[FRONT] style fixed for logo images align center

--- a/frontend/src/components/ArchiveWrapper/ArchiveWrapper.css
+++ b/frontend/src/components/ArchiveWrapper/ArchiveWrapper.css
@@ -1,7 +1,7 @@
 .archivewrapper {
   display: inline-grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: 200px;
+  grid-auto-rows: 195px;
   grid-auto-columns: auto;
   grid-row-gap: 10px;
   grid-column-gap: 10px;
